prd/vpc/main.tf
data "aws_availability_zones" "available" {
    state = "available"
}

resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr_block

    tags = {
        Name = "AILab-vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.public_subnet_cidr_block
    availability_zone = "${data.aws_availability_zones.available.names[0]}"

    tags = {
        Name = "AILab-subnet-public"
    }
}

resource "aws_subnet" "private" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnet_cidr_block
    availability_zone = "${data.aws_availability_zones.available.names[0]}"

    tags = {
        Name = "AILab-subnet-private"
    }
}

resource "aws_internet_gateway" "public" {
    vpc_id = aws_vpc.main.id
}

resource "aws_eip" "nat" {
    vpc = true
}

resource "aws_nat_gateway" "private" {
    allocation_id = aws_eip.nat.id
    subnet_id     = aws_subnet.public.id
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.public.id
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_nat_gateway.private.id
    }
}

resource "aws_route_table_association" "public" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    subnet_id      = aws_subnet.private.id
    route_table_id = aws_route_table.private.id
}
